--- a/libdataflowring/sim_app/static/style.css
+++ b/libdataflowring/sim_app/static/style.css
@@ -217,7 +217,7 @@ header h1 {
     min-height: 0;
     width: 100%;
     border: 1px solid #ccc;
-    background-color: #f7f7f7;
+    background-color: #fdfdfd;
     position: relative;
     overflow: hidden;
     border-radius: 4px;
